specs/app/base/sample_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample
  labels:
    istio.io/dataplane-mode: ambient
    app.kubernetes.io/name: sample
    app.kubernetes.io/part-of: sample
